# mcb

./: README.md  dataloader.py  main.py  metrics.py  pyproject.toml  requirements.txt  utils.py
configs/: config.yaml  flm_sampler_compare_l40.yaml
configs/algo/: flm.yaml
configs/data/: lm1b-wrap.yaml  openwebtext-split.yaml
experiments/marginally_exact_ou_bridge_sweep/: README.md  __init__.py  collect_results.py  common.py  run_sweep.py  validate_samples.py
experiments/marginally_exact_ou_bridge_sweep/configs/: lm1b.yaml  owt.yaml
models/: dit.py
notebooks/: categorical.ipynb  flm_sampler_lm1b.ipynb  flm_sampler_owt.ipynb
samplers/: __init__.py  base.py  corrected.py  marginally_exact.py  ode.py  sde.py
scripts/: aggregate_sampler_summaries.py  build_sampler_summary.py  check_marginally_exact_bridge.py  compute_ppl_and_entropy.py  download_flm_checkpoints.py  plot_sampler_pareto.py
utils/: jvp.py
