[project]
name = "anonymous-flm-sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.6.0",
    "einops==0.8.1",
    "entmax==1.3",
    "fsspec==2025.3.0",
    "hf-transfer==0.1.9",
    "huggingface-hub==0.36.0",
    "hydra-core==1.3.2",
    "lightning==2.6.0",
    "matplotlib>=3.10.9",
    "ninja>=1.13.0",
    "numpy==2.3.2",
    "nvitop==1.3.2",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "requests==2.32.4",
    "rich==14.2.0",
    "scipy==1.16.3",
    "timm==1.0.22",
    "tokenizers==0.22.1",
    "torch>=2.3.0",
    "torchmetrics==1.8.2",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton>=3.6.0",
    "wandb==0.23.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
